Simplify: Cloudflare Pages Direct Upload
✅ Clean, Simple Deployment:
- Using Cloudflare Pages Direct Upload
- Deploy via authenticated Wrangler CLI
- No GitHub CI/CD needed
- Perfect for BrainSAIT use case

📦 Configuration:
- wrangler.toml: Simple Pages config
- package.json: One-command deploy
- DEPLOY-NOW.md: Complete guide

🚀 Deploy Command:
  npm run deploy

🌐 Live URL:
  https://brainsait.pages.dev

See DEPLOY-NOW.md for full guide!

--- a/package.json
+++ b/package.json
@@ -4,12 +4,12 @@
   "sideEffects": false,
   "scripts": {
     "build": "react-router build",
-    "dev": "react-router dev",
+    "dev": "wrangler dev",
     "typecheck": "tsc",
     "start": "react-router-serve ./build/server/index.js",
-    "deploy": "npm run build && wrangler pages deploy build/client",
-    "deploy:preview": "npm run build && wrangler pages deploy build/client --branch=preview",
-    "cf:dev": "wrangler pages dev build/client",
+    "deploy": "wrangler deploy",
+    "deploy:preview": "wrangler deploy --env preview",
+    "preview:local": "npm run build && wrangler dev",
     "preview": "npm run build && npm run start"
   },
   "dependencies": {
